objects/JBCXM__UsageTracker__c.object
<CustomObject>
    <description>This object is used for real time usage tracking.</description>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <inlineHelpText>Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usage Tracker</relationshipLabel>
        <relationshipName>UsageTrackerAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ActionTime__c</fullName>
        <description>To Tracks the time when the usage action occurred</description>
        <inlineHelpText>Action date and time.</inlineHelpText>
        <label>Action Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__AdoptionMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the the adoption measure being tracked. This is the action that is being tracked.</description>
        <inlineHelpText>Adoption Measure.</inlineHelpText>
        <label>Adoption Measure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>Adoption Measure Types</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Usage Tracker</relationshipLabel>
        <relationshipName>UsageTracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__BrowserResolutoin__c</fullName>
        <description>To track the resolutions of the browser on the device from where the Usage occurred</description>
        <inlineHelpText>Resolution of the device where the action occurred.</inlineHelpText>
        <label>Browser Resolutoin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Browser__c</fullName>
        <description>To track the browser that was used where this usage occurred.</description>
        <inlineHelpText>Browser from where the Action occurred.</inlineHelpText>
        <label>Browser</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comments__c</fullName>
        <description>General comments on the usage action</description>
        <inlineHelpText>Comments.</inlineHelpText>
        <label>Comments</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Device__c</fullName>
        <description>To track the device from where the usage action occurred.</description>
        <inlineHelpText>Device where the action occurred.</inlineHelpText>
        <label>Device</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IPAddress__c</fullName>
        <description>IP address from where the usage action occurred.</description>
        <inlineHelpText>IP address from where the usage action occurred.</inlineHelpText>
        <label>IP Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Module__c</fullName>
        <description>Additional fields to tack optional usage metric.</description>
        <inlineHelpText>Module from where the action occurred.</inlineHelpText>
        <label>Module</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserName__c</fullName>
        <description>User name or Email. (We recommend email).</description>
        <inlineHelpText>Email or UserName of the user how did the action.</inlineHelpText>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Usage Tracker</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__ActionTime__c</columns>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__Module__c</columns>
        <columns>JBCXM__AdoptionMeasure__c</columns>
        <columns>JBCXM__UserName__c</columns>
        <columns>JBCXM__Comments__c</columns>
        <columns>JBCXM__Device__c</columns>
        <columns>JBCXM__Browser__c</columns>
        <columns>JBCXM__BrowserResolutoin__c</columns>
        <columns>JBCXM__IPAddress__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Usage Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>